(lang dune 3.20)

(name snake)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Cuinn Kemp")

(maintainers "Cuinn Kemp")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name snake)
 (synopsis "Simple Snake implementation as ocaml practice")
 (description "Simple Snake implementation as ocaml practice")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
